--- a/HTML-CSS-Practical-Midterm-master/style/style.css
+++ b/HTML-CSS-Practical-Midterm-master/style/style.css
@@ -30,7 +30,7 @@ body {
   font-family: sans-serif;
 }
 .jumbotron {
-  background-image: url(/images/image1.jpg);
+  background-image: url(../images/image1.jpg);
   color: white;
   padding-top: 150px;
   padding-bottom: 150px;
